examples/Cypress/CY8CKIT_049_42XX/CY8CKIT_049_42XX_adc.cydsn/CY8CKIT_049_42XX_adc.cydsn/Generated_Source/PSoC4/adc.h

/***************************************
*        Function Prototypes
***************************************/

void adc_Start(void);
void adc_StartConvert(void);
void adc_StopConvert(void);
uint32 adc_IsEndConversion(uint32 retMode);
int16 adc_GetResult16(uint32 chan);
/*   Constants for IsEndConversion() "retMode" parameter  */
#define adc_RETURN_STATUS              (0x01u)